tests/ui/specialization/min_specialization/specialization_super_trait.stderr
error: cannot specialize on trait `Default`
  --> $DIR/specialization_super_trait.rs:13:9
   |
LL | impl<T: Default> SpecMarker for T {
   |         ^^^^^^^

error: aborting due to 1 previous error

